--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,10 +1,31 @@
 <head>
   <meta charset="UTF-8">
-  <title>DOGZLAND</title>
+  <title>THE NOTEBOOK</title>
+  <!-- <link href="../stylesheets/style.css" rel="stylesheet" /> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- CS5356: Any global css styles can be defined here -->
   <style>
+    * {
+      background-color: #FAF4ED;
+      font-family: 'Work Sans', sans-serif;
+    }
 
+    .button {
+      border: 1px solid rgb(0, 0, 0);
+      border-radius: 10px;
+    }
+
+    .navbar {
+      height: 6em;
+      border-bottom: 1px solid rgb(0, 0, 0);
+      background-color: #FAF4ED;
+    }
+
+    #navbar-logo {
+      font-family: 'Alegreya', serif;
+      font-style: italic;
+      font-size: 30px;
+    }
   </style>
 </head>
