--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,36 +1,57 @@
 <nav class="navbar">
-  <div class="container">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <figure class="image">
-          <img class="is-rounded" src="https://bulma.io/images/placeholders/64x64.png" alt="Logo">
-        </figure>
-      </a>
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
+  <div class="container level" id="nav-container">
     <% if(locals.email) { %>
-      <div id="navbarMenu" class="navbar-menu">
-        <div class="navbar-end">
-          <a href="/dashboard" class="navbar-item">
-            <%= email %>
-              <i class="material-icons">person_outline</i>
+    <p class="level-item has-text-centered">
+      <a herf="dashboard" class="level-item has-text-centered" id="navbar-logo">the notebook</a>
+    </p>
+    <div id="navbarMenu" class="navbar-menu">
+      <div class="navbar-end">
+        <a href="/dashboard" class="navbar-item">
+          <%= email %>
+          <i class="material-icons">person_outline</i>
+        </a>
+      </div>
+    </div>
+
+    <% } else if(locals.hideSignIn) { %>
+    <p class="level-item has-text-centered">
+      <a herf="/dashboard" id="navbar-logo">the notebook</a>
+    </p>
+
+    <p class="level-item has-text-centered">
+      <a href="/sign-up" class="link is-info">SIGN UP</a>
+    </p>
+
+    <% } else { %>
+    <div class="level-left">
+      <p class="level-item has-text-centered">
+        <a href="/sign-in" class="link is-info">SIGN IN</a>
+      </p>
+    </div>
+
+    <p class="level-item has-text-centered">
+      <a herf="/dashboard" class="level-center" id="navbar-logo">the notebook</a>
+    </p>
+
+    <div class="level-right">
+      <p class="level-item has-text-centered">
+        <a href="/sign-up" class="link is-info level-right">SIGN UP</a>
+      </p>
+    </div>
+
+
+    <!-- <div id="navbarMenu" class="navbar-menu">
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <a href="/sign-in" class="button is-primary">Sign In
+          </a>
+        </div>
+        <div class="navbar-item">
+          <a href="/sign-up" class="button is-primary">Sign Up
           </a>
         </div>
       </div>
-      <% } else if(locals.hideSignIn) { %>
-      <% } else { %>
-        <div id="navbarMenu" class="navbar-menu">
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <a href="/sign-in" class="button is-primary">Sign In
-              </a>
-            </div>
-          </div>
-        </div>
-      <% }%>
+    </div> -->
+    <% }%>
   </div>
 </nav>
