--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,9 +1,13 @@
 <head>
   <meta charset="UTF-8">
   <title>THE NOTEBOOK</title>
-  <!-- <link href="../stylesheets/style.css" rel="stylesheet" /> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@1&family=Work+Sans&display=swap" rel="stylesheet">
+
   <!-- CS5356: Any global css styles can be defined here -->
   <style>
     * {
