updated sign up page

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,30 +6,36 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-  <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@1&family=Work+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&family=Syne&display=swap" rel="stylesheet">
 
   <!-- CS5356: Any global css styles can be defined here -->
   <style>
     * {
       background-color: #FAF4ED;
-      font-family: 'Work Sans', sans-serif;
+      font-family: 'Syne', sans-serif;
     }
 
     .button {
       border: 1px solid rgb(0, 0, 0);
       border-radius: 10px;
+      background-color: #EB8172;
     }
 
     .navbar {
-      height: 6em;
+      height: 4em;
       border-bottom: 1px solid rgb(0, 0, 0);
       background-color: #FAF4ED;
+    }
+
+    .navbar .level-item{
+      padding-left: 40px;
+      padding-right: 40px;
     }
 
     #navbar-logo {
       font-family: 'Alegreya', serif;
       font-style: italic;
-      font-size: 30px;
+      /* font-size: 30px; */
     }
   </style>
 </head>
