--- a/src/views/pages/sign-up.ejs
+++ b/src/views/pages/sign-up.ejs
@@ -3,26 +3,81 @@
 
 <head>
   <%- include('../partials/head') %>
+  <style>
+    .box {
+      background-color: #F9EBE3;
+      border: 1px solid rgb(0, 0, 0);
+      box-shadow:none;
+    }
+
+    .input {
+      border: 1px solid rgb(0, 0, 0);
+    }
+    .headline {
+      font-size: 30px;
+    }
+    #login-form {
+      padding: 60px;
+    }
+
+  </style>
 </head>
 
 <body>
   <header>
     <%- include('../partials/nav') %>
   </header>
+  <section class="hero is-fullheight">
+    <div class="hero-body">
+    <div class="container">
+      <div class="columns is-centered">
+        <div class="column is-8-tablet is-6-desktop is-4-widescreen">
 
-  <div class="container">
-    Sign Up for a new account or <a href="/sign-in">click here to sign in with an existing account</a>
-    <form id="login-form">
-      <label>Login</label>
-      <input id="login" type="text" name="login" />
-      <label>Password</label>
-      <input type="password" name="password" />
-      <button>Log in</button>
-    </form>
-    <div id="login-error" style="display: none;">
+          <form action="" class="box" id="login-form">
+            <div class="field">
+              <div class="headline">interested in joining the notebook?</div>
+              <div class="headline-sub">sign up here!</div>
+            </div>
+
+            <div class="field">
+              <div class="control">
+                <input type="email" placeholder="e.g. bobsmith@gmail.com" class="input" id="email" name="email" required>
+              </div>
+            </div>
+
+            <div class="field">
+              <div class="control">
+                <input type="password" placeholder="*******" class="input" id="password" name="password" required>
+              </div>
+            </div>
+            
+            <div class="field">
+              <button class="button">SIGN UP</button>
+            </div>
+            <div id="login-error" style="display: none;">
+            </div>
+            <div class="field">
+              already have an account? <a href="/sign-in" class="field">sign in here.</a>
+            </div>
+          </form>
+          
+          <!-- <form id="login-form">
+            <div>
+              <input id="email" type="email" name="email" placeholder="email"/>
+            </div>
+            <div>
+              <input id="password" type="password" name="password" placeholder="password"/>
+            </div>
+            <div>
+              <button>SIGN UP</button>
+            </div>
+          </form> -->
+
+        </div>
+      </div>
     </div>
-    <a href="/dashboard">Dashboard</a>
   </div>
+  </section>
 </body>
 
 <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-app-compat.js"></script>
