--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -22,10 +22,10 @@
     }
 
     .tagline {
-      width: 60%;
+      width: 70%;
       font-weight: normal;
       font-size: 60px;
-      letter-spacing: -2px;
+      letter-spacing: -4px;
       line-height: 60px;
     }
   </style>
@@ -50,8 +50,14 @@
 
         <section class="section">
           <div class="buttons are-medium">
-            <div><button class="button" id="sign-in-button">SIGN IN</button></div>
-            <div><button class="button" id="sign-up-button">SIGN UP</button></div>
+            <div>
+              <a href="/sign-in" button class="button" id="sign-in-button">
+                SIGN IN
+              </a>
+              <a href="/sign-up" button class="button" id="sign-up-button">
+                SIGN UP
+              </a>
+            </div>
           </div>
         </section>
 
