--- a/src/views/pages/sign-in.ejs
+++ b/src/views/pages/sign-in.ejs
@@ -10,19 +10,45 @@
     <%- include('../partials/nav', { hideSignIn: true }) %>
   </header>
 
+  <aside class="menu">
+    <div>
+      <a href="/" button class="button is-text">
+        BACK
+      </a>
+    </div>
+  </aside>
 
-  <form id="login-form">
-    <input type="text" name="login" placeholder="Your user name" />
-    <input type="password" name="password" id="password" />
-    <button>
-      Sign In
-    </button>
+
+  <section class="section is-medium">
+    <h1 class="title">Sign in to The Notebook</h1>
+    <h2 class="subtitle">
+      Connect with your other half :)
+    </h2>
+    <div class="container">
+      <form class="block" id = "login-form">
+        <div class="field">
+          <label class="label">Email</label>
+          <div class="control">
+            <input class="input" type="text" name="login">
+          </div>
+        </div>
+      
+        <div class="field">
+          <label class="label">Password</label>
+          <div class="control">
+            <input class="input" type="password" name="password" id="password">
+          </div>
+        </div>
+      
+        <button class="button">Sign In</button>
+      </form>
     <div id="login-error">
 
-    </div>
-    </div>
-  </form>
+  </section>
+
+
 </body>
+
 <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth-compat.js"></script>
 
