--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -17,28 +17,30 @@
     <p class="level-item has-text-centered">
       <a herf="/dashboard" id="navbar-logo">the notebook</a>
     </p>
-
+<!--
     <p class="level-item has-text-centered">
       <a href="/sign-up" class="link is-info">SIGN UP</a>
     </p>
+-->
 
     <% } else { %>
+<!--
     <div class="level-left">
       <p class="level-item has-text-centered">
-        <a href="/sign-in" class="link is-info" id="sign-in">SIGN IN</a>
+        <a href="/sign-in" class="link is-info">SIGN IN</a>
       </p>
     </div>
-
+-->
     <p class="level-item has-text-centered">
-      <a herf="/dashboard" class="level-center" id="navbar-logo" >the notebook</a>
+      <a herf="/dashboard" class="level-center" id="navbar-logo">the notebook</a>
     </p>
-
+<!--
     <div class="level-right">
       <p class="level-item has-text-centered">
-        <a href="/sign-up" class="link is-info level-right" id="sign-up">SIGN UP</a>
+        <a href="/sign-up" class="link is-info level-right">SIGN UP</a>
       </p>
     </div>
-
+  -->
 
     <!-- <div id="navbarMenu" class="navbar-menu">
       <div class="navbar-end">
