--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -11,10 +11,34 @@
     <%- include('../partials/nav', { email: user.email }) %>
   </header>
 
-  <div class="container">
+  <div class="box">
     <div class="columns">
-      <div class="column is-3 " style="text-align: right;">
+      <div class="column is-3 ">
+            There is a new note for you!
+      </div>
+    </div>
+  </div>
+
+  <div class="box">
+    <div class="columns">
+      <div class="column is-3 " >
             Placeholder for upcoming features!
+      </div>
+    </div>
+  </div>
+
+  <div class="box">
+    <div class="columns">
+      <div class="column is-3 ">
+            From the other
+      </div>
+    </div>
+  </div>
+
+  <div class="box">
+    <div class="columns">
+      <div class="column is-3 ">
+            From you
       </div>
     </div>
   </div>
