--- a/src/views/pages/sign-in.ejs
+++ b/src/views/pages/sign-in.ejs
@@ -3,6 +3,9 @@
 
 <head>
   <%- include('../partials/head') %>
+  <style>
+
+  </style>
 </head>
 
 <body>
@@ -20,12 +23,17 @@
 
 
   <section class="section is-medium">
-    <h1 class="title">Sign in to The Notebook</h1>
-    <h2 class="subtitle">
-      Connect with your other half :)
-    </h2>
     <div class="container">
+      <div class="columns is-centered">
+
       <form class="block" id = "login-form">
+        <div class="title">
+          <h1 class="title">Sign in to The Notebook</h1>
+          <h2 class="subtitle">
+            Connect with your other half :)
+          </h2>
+        </div>
+        
         <div class="field">
           <label class="label">Email</label>
           <div class="control">
@@ -42,6 +50,8 @@
       
         <button class="button">Sign In</button>
       </form>
+    </div>
+      </div>
     <div id="login-error">
 
   </section>
