--- a/src/views/pages/sign-up.ejs
+++ b/src/views/pages/sign-up.ejs
@@ -19,13 +19,17 @@
   </aside>
 
   <section class="section is-medium">
-    <h1 class="title">New to The Notebook?</h1>
-    <h2 class="subtitle">
-      Sign up to join!
-    </h2>
-
     <div class="container">
+      <div class="columns is-centered">
+
       <form class="block" id = "login-form">
+        <div class="title">
+          <h1 class="title">New to The Notebook?</h1>
+          <h2 class="subtitle">
+            Sign up to join!
+          </h2>
+        </div>
+
         <div class="field">
           <label class="label">Email</label>
           <div class="control">
@@ -39,12 +43,12 @@
             <input class="input" type="password" name="password" placeholder="********">
           </div>
         </div>
-      
+        
         <button class="button">Join</button>
+        Or <a href="/sign-in">click here to sign in with an existing account</a>
       </form>
-
-      Or <a href="/sign-in">click here to sign in with an existing account</a>
-
+    </div>
+    </div>
     <div id="login-error" style="display: none;">
   
 
