--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -4,13 +4,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 
-  <link rel="preconnect" href="https://fonts.googleapis.com"> 
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-  <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@1&family=Work+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@1&family=Work+Sans:wght@300;400&display=swap"
+    rel="stylesheet">
 
   <!-- CS5356: Any global css styles can be defined here -->
   <style>
-
     * {
       background-color: #FAF4ED;
       font-family: 'Work Sans', sans-serif;
@@ -22,16 +22,15 @@
     }
 
     .navbar {
-      height: 6em;
+      height: 5em;
       border-bottom: 1px solid rgb(0, 0, 0);
       background-color: #FAF4ED;
     }
 
     #navbar-logo {
-      font-family: 'Alegreya', serif;
+      font-family: 'EB Garamond', serif;
       font-style: italic;
-      font-size: 30px;
+      font-size: 24px;
     }
-    
   </style>
 </head>
