--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -32,5 +32,9 @@
       font-style: italic;
       font-size: 24px;
     }
+
+    #back-button {
+      padding-top: 30px;
+    }
   </style>
 </head>
