--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -22,7 +22,7 @@
     }
 
     .navbar {
-      height: 5em;
+      padding: 1em;
       border-bottom: 1px solid rgb(0, 0, 0);
       background-color: #FAF4ED;
     }
@@ -35,6 +35,15 @@
 
     #back-button {
       padding-top: 30px;
+    }
+
+    .footer {
+      background-color: #FAF4ED;
+      padding: 1.5em;
+    }
+
+    #footer-text {
+      font-size: 12px;
     }
   </style>
 </head>
