updated user database

--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -15,12 +15,10 @@
 <body>
   <div class="container">
     <header>
-      <%- include('../partials/nav', { email: user.email }) %>
+      <%- include('../partials/nav', { email: user.email, userInfo}) %>
     </header>
 
     <section class="section is-small">
-
-      <!-- <div class="title is-5">your notebook</div> -->
 
       <div class="boxes">
 
