--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -10,7 +10,7 @@
 
     <div class="navbar-end">
       <a href="/dashboard" class="navbar-item">
-        <%= email %>
+        Hi, <%= userInfo.username %>
       </a>
       <a href="/" class="navbar-item">Log out</a>
     </div>
