updated front-end again

--- a/src/views/pages/sign-in.ejs
+++ b/src/views/pages/sign-in.ejs
@@ -20,45 +20,46 @@
       </div>
     </aside>
 
+    <div class="sign-div">
 
-    <section class="section is-medium">
-      <div class="columns is-centered">
+      <section class="section is-small">
+        <div class="columns is-centered">
 
-        <form class="block" id="login-form">
-
-          <div class="title">
-            <h1 class="title">Sign in to The Notebook</h1>
-            <h2 class="subtitle">
-              Connect with your other half :)
-            </h2>
-          </div>
-
-          <div class="field">
-            <label class="label">Email</label>
-            <div class="control">
-              <input class="input" id="login" type="text" name="login" placeholder="e.g. alex@gmail.com">
+          <form class="block" id="login-form">
+            <div class="title">
+              <h1 class="title">Sign in to The Notebook</h1>
+              <h2 class="subtitle">
+                Connect with your other half :)
+              </h2>
             </div>
-          </div>
 
-          <div class="field">
-            <label class="label">Password</label>
-            <div class="control">
-              <input class="input" type="password" name="password" id="password" placeholder="********">
+            <div class="field">
+              <label class="label">Email</label>
+              <div class="control">
+                <input class="input" id="login" type="text" name="login" placeholder="e.g. alex@gmail.com">
+              </div>
             </div>
-          </div>
 
-          <div class="field">
-            <button class="button">Sign In</button>
-          </div>
+            <div class="field">
+              <label class="label">Password</label>
+              <div class="control">
+                <input class="input" type="password" name="password" id="password" placeholder="********">
+              </div>
+            </div>
 
-          <div class="field">
-            Or <a href="/sign-up">click here to create a new account</a>
-          </div>
+            <div class="field">
+              <button class="button">Sign In</button>
+            </div>
 
-        </form>
-      </div>
-      <div id="login-error">
-    </section>
+            <div class="field">
+              Or <a href="/sign-up">click here to create a new account</a>
+            </div>
+
+          </form>
+        </div>
+        <div id="login-error">
+      </section>
+    </div>
     <%- include('../partials/footer') %>
   </div>
 </body>
