--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -22,7 +22,7 @@
     }
 
     .navbar {
-      padding: 1em;
+      padding: 1rem;
       border-bottom: 1px solid rgb(0, 0, 0);
       background-color: #FAF4ED;
     }
@@ -33,13 +33,17 @@
       font-size: 24px;
     }
 
+    .sign-div {
+      padding: 3rem;
+    }
+
     #back-button {
-      padding-top: 30px;
+      padding: 2rem;
     }
 
     .footer {
       background-color: #FAF4ED;
-      padding: 1.5em;
+      padding: 1.5rem;
     }
 
     #footer-text {
