--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -9,8 +9,9 @@
     </div>
 
     <div class="navbar-end">
+      <a href="/write-note" class="navbar-item">WRITE A NOTE ✍️</a>
       <a href="/dashboard" class="navbar-item">
-        Hi, <%= userInfo.username %>
+        <%= email %>
       </a>
       <a href="/" class="navbar-item">Log out</a>
     </div>
