--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -3,83 +3,36 @@
 
 <head>
   <%- include('../partials/head') %>
-    <style>
-      .columns,
-      .column,
-      .box {
-        background-color: rgb(255, 254, 254);
-      }
-    </style>
+
 </head>
 
 <body>
+  <header>
+    <%- include('../partials/nav', { email: user.email }) %>
+  </header>
+
+  <div class="box">
+    <div class="columns is-centered">
+      <div class="column is-3 ">
+            Check out the new notes for you!
+      </div>
+    </div>
+  </div>
+
   <div class="container">
-    <header>
-      <%- include('../partials/nav', { email: user.email, userInfo}) %>
-    </header>
-
-    <section class="section is-small">
-
-      <div class="boxes">
-
-        <div class="box">
-          <div class="columns">
-            <div class="column is-3 ">
-              There is a new note for you!
-            </div>
-          </div>
-        </div>
-
-        <div class="box">
-          <div class="columns">
-            <div class="column is-3 ">
-              From the other
-            </div>
-          </div>
-        </div>
-
-        <div class="box">
-          <div class="columns">
-            <div class="column is-3 ">
-              From you
-            </div>
-          </div>
-        </div>
-
-        <div class="box">
-          <div class="columns">
-            <div class="column is-3 ">
-              Placeholder for upcoming features!
-            </div>
-          </div>
-        </div>
-
-        <div class="box">
-          <div class="columns">
-            <div class="column is-3 ">
-              Placeholder for upcoming features!
-            </div>
-          </div>
-        </div>
-
-        <div class="box">
-          <div class="columns">
-            <div class="column is-3 ">
-              Placeholder for upcoming features!
-            </div>
-          </div>
-        </div>
-
-        <div class="box">
-          <div class="columns">
-            <div class="column is-3 ">
-              Placeholder for upcoming features!
-            </div>
-          </div>
+    <div class="columns">
+      <div class="column is-3 " style="text-align: right;">
+        
+      </div>
+      <div class="column is-5">
+        <div class="feed-stream">
+          <%- include('../partials/feed-stream', { feed: feed }) %>
         </div>
       </div>
-    </section>
+    </div>
   </div>
+
+
 </body>
 
 <%- include('../partials/footer') %>
