--- a/src/views/partials/feed-stream.ejs
+++ b/src/views/partials/feed-stream.ejs
@@ -2,15 +2,17 @@
   <article style="margin-bottom: 3em;">
     <div class="card">
       <div class="card-image">
-        <figure class="image is-4by3">
-          <img src="<%= feedItem.imageSource %>" alt="Placeholder image">
-        </figure>
+
       </div>
       <div class="card-content">
         <div class="media">
           <div class="media-left">
             <figure class="image is-48x48">
-              <img class="is-rounded" src="https://bulma.io/images/placeholders/64x64.png" />
+              <% if(feedItem.wishornote ) { %>
+                <img class="is-rounded" src="https://github.com/xxtliu/The-Notebook/blob/main/makewish.png?raw=true" />
+                <% } else { %>
+                  <img class="is-rounded" src="https://github.com/xxtliu/The-Notebook/blob/main/diary-icon.png?raw=true" />
+                  <% }%>
             </figure>
           </div>
           <div class="media-content">
